--- a/excret/CMakeLists.txt
+++ b/excret/CMakeLists.txt
@@ -6,6 +6,6 @@ target_link_libraries(${TNAME} cppbenchmark::cppbenchmark)
 
 add_test(
   NAME TEST_${TNAME}
-  COMMAND ${TNAME} -q -o csv > ${CMAKE_BINARY_DIR}/CSVS/${TNAME}.csv)
+  COMMAND sh -c "./${TNAME} -q -o csv > ${CSVS}/${TNAME}.csv"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 set_tests_properties(${TEST_TARGET} PROPERTIES DEPENDS ${TNAME})
-
