--- a/virtual-overhead/CMakeLists.txt
+++ b/virtual-overhead/CMakeLists.txt
@@ -4,11 +4,22 @@ add_executable(${TNAME} virtual-1.cc virtual-2.cc)
 target_compile_features(${TNAME} PRIVATE cxx_std_20)
 target_link_libraries(${TNAME} cppbenchmark::cppbenchmark)
 
-add_test(
-  NAME TEST_${TNAME}
-  COMMAND sh -c "./${TNAME} -q -o csv > ${CSVS}/${TNAME}.csv"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+file(TO_NATIVE_PATH "${CSVS}/${TNAME}.csv" CSV_OUT)
+
+if (WIN32)
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND powershell -command "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}" 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+else()
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND sh -c "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+endif()
+
 set_tests_properties(${TEST_TARGET} PROPERTIES DEPENDS ${TNAME})
+
 
 SET(TNAME virtual-shuffle)
 
@@ -16,10 +27,21 @@ add_executable(${TNAME} virtual-shuffle-1.cc virtual-shuffle-2.cc)
 target_compile_features(${TNAME} PRIVATE cxx_std_20)
 target_link_libraries(${TNAME} cppbenchmark::cppbenchmark)
 
-add_test(
-  NAME TEST_${TNAME}
-  COMMAND sh -c "./${TNAME} -q -o csv > ${CSVS}/${TNAME}.csv"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+file(TO_NATIVE_PATH "${CSVS}/${TNAME}.csv" CSV_OUT)
+
+if (WIN32)
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND powershell -command "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}" 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+else()
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND sh -c "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+endif()
+
 set_tests_properties(${TEST_TARGET} PROPERTIES DEPENDS ${TNAME})
+
 
 
