--- a/excret/CMakeLists.txt
+++ b/excret/CMakeLists.txt
@@ -6,11 +6,21 @@ add_executable(${TNAME} exc_ret_1.cc exc_ret_2.cc)
 target_compile_features(${TNAME} PRIVATE cxx_std_20)
 target_link_libraries(${TNAME} cppbenchmark::cppbenchmark)
 
-add_test(
-  NAME TEST_${TNAME}
-  COMMAND sh -c "./${TNAME} -q -o csv > ${CSVS}/${TNAME}.csv"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+file(TO_NATIVE_PATH "${CSVS}/${TNAME}.csv" CSV_OUT)
+
+if (WIN32)
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND powershell -command "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}" 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+else()
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND sh -c "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+endif()
 set_tests_properties(${TEST_TARGET} PROPERTIES DEPENDS ${TNAME})
+
 
 # same benchmark, version when no exception happened
 
@@ -21,8 +31,18 @@ target_compile_features(${TNAME} PRIVATE cxx_std_20)
 target_link_libraries(${TNAME} cppbenchmark::cppbenchmark)
 target_compile_definitions(${TNAME} PUBLIC NOEXC)
 
-add_test(
-  NAME TEST_${TNAME}
-  COMMAND sh -c "./${TNAME} -q -o csv > ${CSVS}/${TNAME}.csv"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+file(TO_NATIVE_PATH "${CSVS}/${TNAME}.csv" CSV_OUT)
+
+if (WIN32)
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND powershell -command "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}" 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+else()
+  add_test(
+    NAME TEST_${TNAME}
+    COMMAND sh -c "$<TARGET_FILE:${TNAME}> -q -o csv > ${CSV_OUT}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+endif()
 set_tests_properties(${TEST_TARGET} PROPERTIES DEPENDS ${TNAME})
+
