Added subdirectory for virtual inheritence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,6 @@ add_subdirectory(inline)
 add_subdirectory(noexcept-qsort)
 add_subdirectory(ranges-filter)
 add_subdirectory(ranges-projector)
+add_subdirectory(virtual-inherit)
 add_subdirectory(virtual-inline)
 add_subdirectory(virtual-overhead)
